--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,49 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+.container {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1fr 5fr;
+}
+
+nav {
+    background-color: rgb(45, 115, 236);
+    grid-row: 1/3   ;
+    grid-column: 1/2;
+
+    display: grid;
+}
+
+header {
+    grid-row: 1/2;
+    grid-column: 2/3;
+}
+
+section {
+    background-color: rgb(206, 206, 206);
+    grid-row: 2/3;
+    grid-column: 2/3;
+
+    display: grid;
+}
+
+
+.card {
+    background-color: white;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+nav a {
+    color: white;
 }
